// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningLightIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningLightIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningLightIcon-background"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1"
  />
  <path
    className="lucid-WarningLightIcon-mark"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1m0-1C7.373 0 6.74.46 6.262 1.37 5.236 3.322.858 11.833.412 12.683-.545 14.503.223 16 2.12 16H13.87c1.897 0 2.665-1.493 1.708-3.317-2.375-4.525-3.457-6.79-5.83-11.312C9.27.46 8.636 0 8.006 0z"
  />
  <path
    className="lucid-WarningLightIcon-mark"
    d="M9 4v7H7V4h2zM7 14h2v-2H7v2z"
  />
</Icon>
`;

exports[`WarningLightIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningLightIcon lucid-WarningLightIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningLightIcon-background"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1"
  />
  <path
    className="lucid-WarningLightIcon-mark"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1m0-1C7.373 0 6.74.46 6.262 1.37 5.236 3.322.858 11.833.412 12.683-.545 14.503.223 16 2.12 16H13.87c1.897 0 2.665-1.493 1.708-3.317-2.375-4.525-3.457-6.79-5.83-11.312C9.27.46 8.636 0 8.006 0z"
  />
  <path
    className="lucid-WarningLightIcon-mark"
    d="M9 4v7H7V4h2zM7 14h2v-2H7v2z"
  />
</Icon>
`;

exports[`WarningLightIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningLightIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningLightIcon-background"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1"
  />
  <path
    className="lucid-WarningLightIcon-mark lucid-WarningLightIcon-mark-is-disabled"
    d="M8.005 1c.192 0 .533.22.858.834 1.176 2.243 2.05 3.957 2.893 5.614.855 1.68 1.74 3.417 2.937 5.698.312.596.384 1.14.192 1.458-.208.345-.725.396-1.014.396H2.12c-.29 0-.805-.05-1.013-.396-.192-.317-.12-.86.194-1.457.164-.314.866-1.677 1.74-3.368C4.5 6.943 6.5 3.06 7.146 1.834 7.47 1.22 7.812 1 8.005 1m0-1C7.373 0 6.74.46 6.262 1.37 5.236 3.322.858 11.833.412 12.683-.545 14.503.223 16 2.12 16H13.87c1.897 0 2.665-1.493 1.708-3.317-2.375-4.525-3.457-6.79-5.83-11.312C9.27.46 8.636 0 8.006 0z"
  />
  <path
    className="lucid-WarningLightIcon-mark lucid-WarningLightIcon-mark-is-disabled"
    d="M9 4v7H7V4h2zM7 14h2v-2H7v2z"
  />
</Icon>
`;
